# EasiDocs

./: Embeddings.py  RAG.py  README.md  databaseManager.py  docingesterTemp.py  document_ingestion.py  documents.json  localLLM.py  prompt_template.py  tempCodeRunnerFile.py  test.docx  test.md  test.txt
backend/: RAG.py  databaseManager.py  docingesterTemp.py  eval.ipynb  eval.py  prompt_template.py  qStar.py  tempCodeRunnerFile.py
backend/chromadb/VectorStore/: chroma.sqlite3
backend/eval/: test.py
backend/loltest/: testar.py
backend/pdf/: begginning_of_infinity-naval.txt  happiness-naval.txt  wealth-naval.txt
backend/testFolder/: test.docx
chroma_db/: chroma.sqlite3
chromadb/VectorStore/: chroma.sqlite3
chromadb/VectorStore/1aef264d-355a-49cd-ba18-f91341c971a8/: index_metadata.pickle
chromadb/VectorStore/201a85cb-0f55-409a-bae3-c2fb40221cec/: index_metadata.pickle
chromadb/VectorStore/6cf46b83-e12f-44d2-a24a-b347f19c9a53/: index_metadata.pickle
chromadb/VectorStore/8a5dc1a4-7776-4395-bea8-e4d7b334e1af/: index_metadata.pickle
chromadb/VectorStore/98e0d9ac-7024-4fd2-b4a9-f547adffc0d9/: index_metadata.pickle
easidocs/: package-lock.json  package.json
easidocs/src/: App.tsx  style.css  styles.css
easidocs/src-tauri/: Cargo.toml  tauri.conf.json
pdf/: test.json.json
rag/: pom.xml
rust_server/: Cargo.toml
rust_server/src/: gemma_rag_results.csv  main.rs  mistral_rag_results.csv  qwen-14b_rag_results.csv
rust_server/src/chromadb/: chroma.sqlite3
rust_server/src/chromadb/VectorStore/: chroma.sqlite3
(+31 files in other folders)
