[package]
name = "rust_server"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.0.0"
actix-rt = "2.2.0"
actix-cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
actix-multipart = "0.4.0"
futures = "0.3"
sanitize-filename = "0.3.0"
pyo3 = { version = "0.20.3", features = ["auto-initialize"] }
tokio = { version = "1", features = ["full"] }
